[gd_scene load_steps=20 format=2]

[ext_resource path="res://UI/skull.png" type="Texture" id=1]
[ext_resource path="res://UI/EXPBarLayer1Slicepng.png" type="Texture" id=2]
[ext_resource path="res://UI/Portarait.png" type="Texture" id=3]
[ext_resource path="res://UI/HPBar.png" type="Texture" id=4]
[ext_resource path="res://Brunhilda/BrunhildaPortraitBase.png" type="Texture" id=5]
[ext_resource path="res://UI/HPBarLayer1Slice.png" type="Texture" id=6]
[ext_resource path="res://UI/EXPBarLayer2End.png" type="Texture" id=7]
[ext_resource path="res://UI/GUI/SkillIcon.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/GUI/GUI.gd" type="Script" id=9]
[ext_resource path="res://UI/MinimalPixel v2.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UI/EXPBarLayer2Slice.png" type="Texture" id=11]
[ext_resource path="res://UI/HPBarLayer2End.png" type="Texture" id=12]
[ext_resource path="res://UI/HPBarLayer2Slice.png" type="Texture" id=13]
[ext_resource path="res://UI/Row1.tscn" type="PackedScene" id=14]
[ext_resource path="res://Skills/SkillChooseTitleBackground.png" type="Texture" id=15]
[ext_resource path="res://Medieval Scroll of Wisdom.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Skills/SkillIconBackground.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 16 )

[node name="GUI" type="Control" groups=["GUI"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 9 )
skillIcons = [ NodePath("SkillsContainer/SkillIcon"), NodePath("SkillsContainer/SkillIcon2"), NodePath("SkillsContainer/SkillIcon3"), NodePath("SkillsContainer/SkillIcon4"), NodePath("SkillsContainer/SkillIcon5"), NodePath("SkillsContainer/SkillIcon6") ]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 166.0
margin_bottom = 62.0
texture = ExtResource( 3 )
expand = true

[node name="SkillsContainer" type="HBoxContainer" parent="."]
margin_top = 60.0
margin_right = 231.0
margin_bottom = 94.0
custom_constants/separation = 0

[node name="SkillIcon" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 34.0
margin_bottom = 34.0

[node name="SkillIcon2" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 34.0
margin_top = 0.0
margin_right = 68.0
margin_bottom = 34.0

[node name="SkillIcon3" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 68.0
margin_top = 0.0
margin_right = 102.0
margin_bottom = 34.0

[node name="SkillIcon4" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 102.0
margin_top = 0.0
margin_right = 136.0
margin_bottom = 34.0

[node name="SkillIcon5" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 136.0
margin_top = 0.0
margin_right = 170.0
margin_bottom = 34.0

[node name="SkillIcon6" parent="SkillsContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 170.0
margin_top = 0.0
margin_right = 204.0
margin_bottom = 34.0

[node name="SkullImage" type="TextureRect" parent="."]
margin_left = 67.0
margin_top = 37.0
margin_right = 85.0
margin_bottom = 55.0
texture = ExtResource( 1 )
expand = true

[node name="CharacterPortrait" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 56.0
texture = ExtResource( 5 )
expand = true

[node name="XPBarBackground2" type="NinePatchRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 68.0
margin_top = 21.0
margin_right = 190.0
margin_bottom = 29.0
texture = ExtResource( 11 )

[node name="XPBarEnd" type="TextureRect" parent="XPBarBackground2"]
margin_left = 117.0
margin_right = 128.0
margin_bottom = 10.0
texture = ExtResource( 7 )
expand = true

[node name="HPBarBackground2" type="NinePatchRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 68.0
margin_top = 5.0
margin_right = 191.0
margin_bottom = 13.0
texture = ExtResource( 13 )

[node name="HPBarEnd" type="TextureRect" parent="HPBarBackground2"]
margin_left = 117.0
margin_right = 128.0
margin_bottom = 10.0
texture = ExtResource( 12 )
expand = true

[node name="HPBarFilling" type="TextureProgress" parent="."]
margin_left = 68.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 13.0
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="ExpBarFilling" type="TextureProgress" parent="."]
margin_left = 68.0
margin_top = 21.0
margin_right = 195.0
margin_bottom = 29.0
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="HPBarBackground" type="TextureRect" parent="."]
margin_left = 66.0
margin_right = 200.0
margin_bottom = 18.0
texture = ExtResource( 4 )
expand = true

[node name="XPBarBackground" type="TextureRect" parent="."]
margin_left = 66.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 34.0
texture = ExtResource( 4 )
expand = true

[node name="KillCountLabel" type="Label" parent="."]
margin_left = 86.0
margin_top = 39.0
margin_right = 158.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "99999999"

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Row1" parent="Control" instance=ExtResource( 14 )]

[node name="Row2" parent="Control" instance=ExtResource( 14 )]
margin_top = 132.0
margin_bottom = 243.0

[node name="Row3" parent="Control" instance=ExtResource( 14 )]
margin_top = 239.0
margin_bottom = 350.0

[node name="SkillInfoBox" type="TextureRect" parent="Control"]
margin_left = 350.0
margin_top = 1.0
margin_right = 638.0
margin_bottom = 360.0
texture = ExtResource( 17 )
expand = true

[node name="Title" type="TextureRect" parent="Control"]
margin_left = 60.0
margin_right = 338.0
margin_bottom = 21.0
texture = ExtResource( 15 )
expand = true

[node name="Label" type="Label" parent="Control/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
text = "Choose Skill"
align = 1
valign = 1
